dont send a request when switching catalog

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
             <div class="mode-arrow">
               <select name="mode" id="mode" size="1">
                 <option value="sd">Standard</option>
-                <option value="ad">Advanced</option>
+                <option value="ad" selected="selected">Advanced</option> <!-- While development, this is selected. Remove when deploying -->
               </select>
             </div>
         </div>
