--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -307,7 +307,7 @@ input[type=button] {
   #location-container {
     height: 32px;
     min-width: 200px;
-    max-width: 300px;
+    max-width: 400px;
     @include border-radius(5px);
     border: 1px solid $grey;
     background: white;
@@ -316,10 +316,12 @@ input[type=button] {
     margin-top: 10px;
     float: left;
     margin-left: 16px;
+    overflow: hidden;
 
     #location-inner {
       padding: 2px;
       padding-left: 5px;
+      padding-right: 5px;
       height: 28px;
     }
 
