Render map after container has loaded. Fixes #170, fixes #240.

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -581,15 +581,10 @@ div.container {
   }
 
   #map {
-    float: left;
+    float: right;
     display: inline;
     width: 60%;
     height: 85%;
-
-    #map-frame {
-      height: 100%;
-      width: 100%;
-    }
   }
 
   #location-map {
