--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -41,6 +41,11 @@ $dark-purple: #9933CC;
   }
 }
 
+@mixin opacity($ammount){
+  opacity: $ammount;
+  filter: alpha(opacity = $ammount*100);
+}
+
 /***********General************/
 
 #mindmap {
@@ -452,46 +457,59 @@ div.node, div.legend {
 div.container {
   position: absolute;
   z-index: 2;
+  @include border-radius(7px);
 
   //black
   &.syn {
+    @include opacity(0.3);
+    background: lighten($dark-blue, 30%);
     &.active {
-      background: lighten($dark-blue, 30%);
+      @include opacity(1);
     }
   }
 
   //blue
   &.field {
+    @include opacity(0.3);
+    background: lighten($blue, 30%);
     &.active {
-      background: lighten($blue, 30%);
+      @include opacity(1);
     }
   }
 
   //red
   &.drg {
+    @include opacity(0.5);
+    background: lighten($red, 30%);
     &.active {
-      background: lighten($red, 30%);
+      @include opacity(1);
     }
   }
 
   //orange
   &.inclusiva-exclusiva {
+    @include opacity(0.5);
+    background: lighten($orange, 30%);
     &.active {
-      background: lighten($orange, 30%);
+      @include opacity(1);
     }
   }
 
   //grey
   &.super {
+    @include opacity(0.3);
+    background: lighten($dark-green, 50%);
     &.active {
-      background: lighten($dark-green, 50%);
+      @include opacity(1);
     }
   }
 
   //purple
   &.sub {
+    @include opacity(0.5);
+    background: lighten($purple, 30%);
     &.active {
-      background: lighten($purple, 30%);
+      @include opacity(1);
     }
   }
 
@@ -499,6 +517,7 @@ div.container {
     .container-inner {
       p {
         display: inline;
+          @include opacity(1);
       }
     }
   }
@@ -508,9 +527,9 @@ div.container {
     width: 100%;
     height: 100%;
     p {
+      @include opacity(0.5);
       padding: 5px;
       position: absolute;
-      display: none;
       //bottom-right
       &.syn {
         bottom: 0;
@@ -550,6 +569,7 @@ div.container {
       &.show-type {
         font-size: 20px;
       }
+
     }
 
   }
