add hoverIntent. This fixes #253 and #254

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -396,6 +396,8 @@ div.node, div.legend {
   &.syn {
     @include node-border($dark-blue);
     text-align: left;
+    overflow-y: scroll;
+    max-height: 150px;
   }
 
   &.field {
