--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -392,7 +392,7 @@ input[type=button] {
 div.node, div.legend {
   background: $light-grey;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 5px;
   max-width: 250px;
   word-wrap: break-word;
   position: absolute;
@@ -408,7 +408,22 @@ div.node, div.legend {
 
   &.field {
     @include node-border($blue);
-    max-width: 180px;
+
+    .icon-user-md{
+      font-size: 28px;
+      margin: 0;
+      background: transparent;
+      float: right;
+      line-height: 50px;
+      vertical-align: middle;
+      margin-left: 5px;
+      padding-left: 5px;
+    }
+
+    .content{
+      float: left;
+      max-width: 160px;
+    }
   }
 
   &.drg {
