remove individual hiding of panels

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,15 +41,15 @@
         <div id="panels-container">
             <div id="panels">
               <div id="legend" class="panel">
-                <div id="legend-title" class="title clickable"></div>
+                <div id="legend-title" class="title"></div>
                 <div id="legend-text"></div>
               </div>
               <div id="info" class="panel">
-                <div id="info-title" class="title clickable"></div>
+                <div id="info-title" class="title"></div>
                 <div id="info-text"></div>
               </div>
               <div id="admin" class="panel">
-                <div id="admin-title" class="title clickable"><p>Admin panel</p></div>
+                <div id="admin-title" class="title"><p>Admin panel</p></div>
                 <div id="admin-text"></div>
               </div>
             </div>
