Make location selection map work in IE7

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -615,6 +615,7 @@ div.container {
 .docOverlay, #location-popup {
   height: 100%;
   width: 100%;
+  position: relative;
 
   .location p {
     position: relative;
@@ -641,6 +642,14 @@ div.container {
     display: inline;
     width: 700px;
     height: 500px;
+    z-index: 1000 !important;
+    position: relative !important;
+    padding: 0 15px !important;
+
+    div {
+      z-index: 500 !important;
+      position: absolute !important;
+    }
   }
 
   #docList {
