--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,6 +37,7 @@
               </select>
             </div>
         </div>
+        <div id="breadcrumb"><a href="google.ch">Google</a></div>
         <div id="hide-panels" class="clickable"><h3>?</h3></div>
         <div id="panels-container">
             <div id="panels">
