Further work on Bradcrumbs
	new file:   app/assets/javascripts/libraries/jquery.jBreadCrumb.1.1.js
	modified:   app/assets/javascripts/orangeproton.options.js
	modified:   app/assets/javascripts/orangeproton.trail.js
	modified:   app/assets/javascripts/request.js
	new file:   app/assets/stylesheets/breadcrumb/Base.css
	new file:   app/assets/stylesheets/breadcrumb/BreadCrumb.css
	modified:   app/views/home/index.html.erb

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,6 +37,12 @@
               </select>
             </div>
         </div>
+        <div id="bread-crumb-container"class="breadCrumbHolder module">
+            <div id="bread-crumbs" class="breadCrumb module">
+            </div>
+        </div>
+        <div class="chevronOverlay main">
+        </div>
         <div id="hide-panels" class="clickable"><h3>?</h3></div>
         <div id="panels-container">
             <div id="panels">
