Make crumbs more or less work
	new file:   app/assets/images/home.gif
	new file:   app/assets/images/separator.gif
	new file:   app/assets/javascripts/libraries/jquery.browser.js
	deleted:    app/assets/javascripts/libraries/jquery.jBreadCrumb.1.1.js
	new file:   app/assets/javascripts/libraries/xbreadcrumbs.js
	modified:   app/assets/javascripts/orangeproton.trail.js
	modified:   app/assets/javascripts/request.js
	deleted:    app/assets/stylesheets/breadcrumb/BreadCrumb.css
	new file:   app/assets/stylesheets/xbreadcrumbs.css
	modified:   app/views/home/index.html.erb

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,12 +37,11 @@
               </select>
             </div>
         </div>
-        <div id="breadcrumb" class="breadCrumbHolder module">
-            <div id="bread-crumbs" class="breadCrumb module">
-            </div>
+        <div id="breadcrumb">
+            <ul id="bread-crumbs" class="xbreadcrumbs">
+            </ul>
         </div>
-        <div class="chevronOverlay main">
-        </div>
+
         <div id="hide-panels" class="clickable"><h3>?</h3></div>
         <div id="panels-container">
             <div id="panels">
