add indication of fallback language. Fixes #286

--- a/app/assets/stylesheets/notify.css
+++ b/app/assets/stylesheets/notify.css
@@ -20,7 +20,7 @@
 
 #notify{
         font-family: sans-serif;
-        position: absolute;
+        position: fixed;
         top: 80px;
         left: 0;
         width: 100%;
