--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
                 <p class="location"></p>
               </div>
             </div>
-            <div class="hide-arrow">
+            <div class="lang-arrow">
                 <select name="lang" id="lang" size="1">
                     <option value="de">Deutsch</option>
                     <option value="fr">Français</option>
