--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -717,3 +717,31 @@ div.container {
 #location-input {
   height: 25px;
 }
+
+/***********Bread Crumbs************/
+#breadcrumb {
+  line-height: 30px;
+  vertical-align: middle;
+  a:visited {
+    text-decoration: none;
+    color: black;
+  }
+
+  ul {
+    margin: 0px !important;
+  }
+
+  li {
+    display: inline;
+    border-right: none;
+    background: url(separator.gif) no-repeat right center;
+    padding-right: 15px;
+    padding-left: 10px;
+
+
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
