--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,7 +38,8 @@
             </div>
         </div>
         <div id="breadcrumb">
-            <ul id="bread-crumbs" class="xbreadcrumbs">
+            <ul id="bread-crumbs">
+              <li><a href="/" class="icon-home" style="font-size: 16px"></a></li>
             </ul>
         </div>
 
