--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,5 +1,7 @@
 /* Use SASS (http://sass-lang.com/) here */
 /***********VARIABLES************/
+
+/* Colors */
 $blue: #33B5E5;
 $red: #FF4444;
 $green: #99CC00;
@@ -14,11 +16,13 @@ $dark-orange: #FF8800;
 $dark-green: #669900;
 $dark-purple: #9933CC;
 
-/* TODO use constants for positions too
+/* Sizes */
+$border-radius: 7px;
 
- are these sass doing? Pretty neat...*/
 
-/***********MIXINS************/
+/************************************/
+/**************MIXINS****************/
+/************************************/
 
 /* sets the radius for all vendor-prefixes (and unprefixed) */
 @mixin border-radius($rad) {
@@ -29,7 +33,7 @@ $dark-purple: #9933CC;
 
 /* sets the border of the nodes */
 @mixin node-border($color) {
-  @include border-radius(7px);
+  @include border-radius($border-radius);
   border: 2px solid $color;
 }
 
@@ -46,16 +50,15 @@ $dark-purple: #9933CC;
   filter: alpha(opacity = $ammount*100);
 }
 
-/***********General************/
+/************************************/
+/**************General***************/
+/************************************/
 
 #mindmap {
   position: absolute;
   top: 89px;
 
-  svg {
-    z-index: 3;
-  }
-  .rvml {
+  svg, .rvml {
     z-index: 3;
   }
 }
@@ -71,7 +74,7 @@ ul{
 }
 
 input[type=text] {
-  @include border-radius(5px);
+  @include border-radius($border-radius);
   border: 1px solid $grey;
   padding: {
     left: 2px;
@@ -86,7 +89,7 @@ input[type=text] {
 
 input[type=button] {
   background-color: $light-grey;
-  border-radius: 5px;
+  @include border-radius($border-radius);
   padding-left: 15px !important;
   padding-right: 15px !important;
   margin: {
@@ -106,16 +109,6 @@ input[type=button] {
   float: right;
 }
 
-.messagebox {
-  margin: 1px;
-  width: 240px;
-
-  div.messagebox-buttons {
-    text-align: right;
-    margin-top: 10px;
-  }
-}
-
 /* all clickable elements */
 .clickable {
   @include clickable;
@@ -125,8 +118,10 @@ input[type=button] {
   display: none;
 }
 
-/***********Side panel************/
 
+/************************************/
+/*************Side panel*************/
+/************************************/
 #panels-container {
   max-width: 250px;
   position: absolute;
@@ -139,9 +134,8 @@ input[type=button] {
   .title {
     background: $light-grey;
     border-bottom: 1px solid $grey;
-    @include border-radius(7px);
+    @include border-radius($border-radius);
     margin: 0 -10px 0 -10px;
-    margin-bottom: 0;
     font-size: 16px;
     height: 25px;
     text-align: center;
@@ -164,7 +158,7 @@ input[type=button] {
       margin-left: 0;
       background: white;
       border: 1px solid $grey;
-      @include border-radius(7px);
+      @include border-radius($border-radius);
       padding: 0 10px 0 10px;
       position: relative;
     }
@@ -214,7 +208,7 @@ input[type=button] {
   height: 30px;
   z-index: 8;
   text-align: center;
-  @include border-radius(5px);
+  @include border-radius($border-radius);
   -webkit-border-top-right-radius: 0px;
   -webkit-border-bottom-right-radius: 0px;
   -moz-border-radius-topright: 0px;
@@ -225,8 +219,9 @@ input[type=button] {
   vertical-align: middle;
   border-right: none;
 }
-
-/***********Top bar************/
+/************************************/
+/***************Top bar**************/
+/************************************/
 
 #search-bar {
   position: fixed;
@@ -235,7 +230,6 @@ input[type=button] {
   height: 50px;
   background: $light-grey;
   border-bottom: 1px solid $grey;
-  /* box-shadow: 0px 3px 8px #666; /* looks pretty neat... */
   top: 0;
   left: 0;
   z-index: 11;
@@ -262,68 +256,69 @@ input[type=button] {
     @include clickable;
   }
 
+
+  @mixin hide-arrow($width){
+    border: 1px solid $grey;
+    padding-top: 3px;
+    overflow: hidden;
+    @include border-radius($border-radius);
+    background: url(arrow.png) no-repeat right white;
+    margin-left: 16px;
+    margin-top: 10px;
+    height: 29px !important;
+    width: $width;
+
+    &.svg {
+      background: url(arrow.svg) no-repeat right white !important;
+      background-size: 30px 15px !important;
+    }
+  }
+
   .lang-arrow {
-    border: 1px solid $grey;
-    width: 100px;
-    padding-top: 3px;
-    overflow: hidden;
-    border-radius: 7px;
     float: right;
-    background: url(arrow.png) no-repeat right white;
-    height: 29px !important;
-    margin-left: 16px;
-    margin-top: 10px;
     margin-right: 16px;
-
-    &.svg {
-      background: url(arrow.svg) no-repeat right white !important;
-      background-size: 30px 15px !important; /* you need to make your svg bigger than 1 px = 1 px to trick the browser into not prerendering it...*/
-    }
+    @include hide-arrow(100px);
   }
 
-  /* TODO Share code with above */
   .mode-arrow {
-    border: 1px solid $grey;
-    width: 110px;
-    padding-top: 3px;
-    border-radius: 7px;
-    overflow: hidden;
     float: right;
-    background: url(arrow.png) no-repeat right white;
-    height: 29px !important;
-    margin-left: 16px;
-    margin-top: 10px;
-
-    &.svg {
-      background: url(arrow.svg) no-repeat right white !important;
-      background-size: 30px 15px !important;
-    }
+    @include hide-arrow(110px);
   }
 
-  /* TODO Share code with above */
   .catalog-arrow {
-    border: 1px solid $grey;
-    width: 140px;
-    overflow: hidden;
-    padding-top: 3px;
-    border-radius: 7px;
     float: left;
-    background: url(arrow.png) no-repeat right white;
-    height: 29px !important;
-    margin-left: 16px;
-    margin-top: 10px;
+    @include hide-arrow(140px);
+  }
 
-    &.svg {
-      background: url(arrow.svg) no-repeat right white !important;
-      background-size: 30px 15px !important;
-    }
+  @mixin select($width){
+    background: transparent;
+    line-height: 1;
+    border: 0;
+    border-radius: 0;
+    padding: 3px 5px 3px 15px;
+    height: 25px;
+    -webkit-appearance: none;
+    width: $width;
+  }
+
+  #lang {
+    @include select(125px);
+
+  }
+
+  #mode {
+    @include select(135px);
+  }
+
+  #catalog {
+    @include select(165px);
   }
 
   #location-container {
     height: 32px;
     min-width: 200px;
     max-width: 400px;
-    @include border-radius(5px);
+    @include border-radius($border-radius);
     border: 1px solid $grey;
     background: white;
     line-height: 28px;
@@ -355,52 +350,12 @@ input[type=button] {
     }
   }
 
-  #lang {
-    background: transparent;
-    width: 125px;
-    line-height: 1;
-    border: 0;
-    border-radius: 0;
-    padding: 3px 5px 3px 15px;
-    height: 25px;
-    -webkit-appearance: none;
-  }
-
-  #mode {
-    background: transparent;
-    width: 135px;
-    line-height: 1;
-    border: 0;
-    border-radius: 0;
-    padding: 3px 5px 3px 15px;
-    height: 25px;
-    -webkit-appearance: none;
-  }
-
-  #catalog {
-    background: transparent;
-    width: 165px;
-    line-height: 1;
-    border: 0;
-    border-radius: 0;
-    padding: 3px 5px 3px 15px;
-    height: 25px;
-    -webkit-appearance: none;
-  }
-
 }
 
-#breadcrumb{
-  position: fixed;
-  top:50px;
-  height:30px;
-  width:100%;
-  background: $light-grey;
-  left:0;
-  border-bottom: 1px solid $grey;
-}
 
+/********************************************/
 /***********Nodes and Containers************/
+/*******************************************/
 
 /* nodes and legend items */
 div.node, div.legend {
@@ -462,7 +417,7 @@ div.node, div.legend {
   &.root {
     background: $light-grey;
     @include node-border($grey);
-    @include border-radius(5px);
+    @include border-radius($border-radius);
     font-size: 20px;
     z-index: 10;
     max-width: 300px;
@@ -499,7 +454,7 @@ div.node{
 div.container {
   position: absolute;
   z-index: 2;
-  @include border-radius(7px);
+  @include border-radius($border-radius);
 
   //black
   &.syn {
@@ -624,8 +579,10 @@ div.container {
   position: absolute;
 }
 
-/***********Overlay************/
 
+/************************************/
+/**************Overlay***************/
+/************************************/
 .docOverlay, #location-popup {
   height: 100%;
   width: 100%;
@@ -709,8 +666,20 @@ div.container {
   height: 25px;
 }
 
-/***********Bread Crumbs************/
+
+/************************************/
+/***********Bread Crumbs*************/
+/************************************/
+
+
 #breadcrumb {
+  position: fixed;
+  top:50px;
+  height:30px;
+  width:100%;
+  background: $light-grey;
+  left:0;
+  border-bottom: 1px solid $grey;
   line-height: 30px;
   vertical-align: middle;
   a:visited {
