Remove caret of last crumb
	modified:   app/assets/javascripts/orangeproton.trail.js
	modified:   app/assets/stylesheets/style.css.scss

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -707,6 +707,10 @@ div.container {
     padding-right: 15px;
     padding-left: 10px;
 
+    &.last {
+      background: none;
+    }
+
     &:hover {
       text-decoration: underline;
       cursor: pointer;
