--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,13 @@
 <html>
     <head>
         <title>OrangeProton</title>
-        <%= stylesheet_link_tag "application", :media => "all" %>
+        <!--[if lt IE 9]>
+          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+        <%= stylesheet_link_tag "application-all", :media => "all" %>
+        <!--[if IE 7]>
+          <%= stylesheet_link_tag "application-ie", :media => "all" %>
+        <![endif]-->
         <%= csrf_meta_tags %>
     </head>
     <body>
