--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
         <![endif]-->
         <%= stylesheet_link_tag "application-all", :media => "all" %>
         <!--[if IE 7]>
-          <%= stylesheet_link_tag "application-ie", :media => "all" %>
+        <%= stylesheet_link_tag "application-ie", :media => "all" %>
         <![endif]-->
         <%= csrf_meta_tags %>
     </head>
@@ -63,6 +63,10 @@
             </div>
         </div>
         <div id="mindmap"></div>
+        <!--Get the rails environment and put it in a js var -->
+        <script type="text/javascript">
+            window.rails_env = ('<%= Rails.env %>');
+        </script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyAjPl4yzI4xYU9yw2GgptYV547pFo3ounE"></script>
         <%= javascript_include_tag "application" %>
     </body>
