little dropdown fixes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,7 +30,7 @@
             </div>
             <div class="lang-container">
                 <select name="lang" id="lang" size="5">
-                    <option value="de">Deutsch</option>
+                    <option value="de" selected="selected">Deutsch</option>
                     <option value="fr">Français</option>
                     <option value="it">Italiano</option>
                     <option value="en">English</option>
