resize searchbar if window is small. Fixes #297

--- a/app/assets/stylesheets/all/style.css.scss
+++ b/app/assets/stylesheets/all/style.css.scss
@@ -318,6 +318,7 @@ input[type=button] {
       padding-left: 5px;
       padding-right: 5px;
       height: 28px;
+      text-overflow: ellipsis;
     }
 
     p {
