--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,7 +39,7 @@
             <div class="mode-container">
               <select name="mode" id="mode" size="4">
                 <option value="sd">Standard</option>
-                <option value="ad" selected="selected">Advanced</option> <!-- While development, this is selected. Remove when deploying -->
+                <option value="ad" selected="selected">Advanced</option>
               </select>
             </div>
         </div>
