Connected doctor fallback in frontend to backend (fixes #303), added remaining localisations (fixes #251).

--- a/app/assets/stylesheets/all/style.css.scss
+++ b/app/assets/stylesheets/all/style.css.scss
@@ -325,7 +325,6 @@ input[type=button] {
       display: inline;
     }
 
-
     .location {
       max-width: 430px;
       font-size: 0.8em;
@@ -621,6 +620,10 @@ div.container {
   height: 100%;
   width: 100%;
   overflow: hidden;
+
+  #loc {
+    margin-left: 5px
+  }
 
   .location p {
     position: relative;
