--- a/app/assets/stylesheets/all/jquery.selectBoxIt.css
+++ b/app/assets/stylesheets/all/jquery.selectBoxIt.css
@@ -90,7 +90,7 @@
     overflow-y: auto;
     cursor: pointer;
     display: none;
-    z-index: 9999999999999;
+    z-index: 15 !important;
     border-radius: 6px;
     text-align: left;
     -webkit-box-shadow: none;
