--- a/app/assets/stylesheets/all/style.css.scss
+++ b/app/assets/stylesheets/all/style.css.scss
@@ -1,4 +1,4 @@
-/* Use SASS (http://sass-lang.com/) here */
+/* Use*/
 /***********VARIABLES************/
 
 /* Colors */
@@ -617,7 +617,7 @@ div.container {
 /************************************/
 /**************Overlay***************/
 /************************************/
-.docOverlay, #location-popup {
+#doc-overlay, #location-popup {
   height: 100%;
   width: 100%;
   overflow: hidden;
@@ -653,7 +653,7 @@ div.container {
     height: 500px;
   }
 
-  #docHeader {
+  #doc-header {
     position: relative;
     height: 80px;
     width: 100%;
@@ -683,12 +683,12 @@ div.container {
     }
   }
 
-  #docTitle {
+  #doc-title {
     font-size: 1.8em;
     font-weight: bold;
     display: inline;
   }
-  #docList {
+  #doc-list {
     float: left;
     display: inline;
     width: 40%;
@@ -726,24 +726,6 @@ div.container {
       &:hover {
         background-color: $dark-grey !important;
         color: white !important;
-      }
-    }
-
-
-    /* the input element behind the doctor list */
-    input[type="radio"] {
-      display: none;
-
-      &:checked + label {
-        background-color: $grey;
-      }
-
-      .active:after {
-        content: url(arrow.png);
-        position: absolute;
-        top: 50%;
-        left: 100%;
-        margin: 10px;
       }
     }
   }
