--- a/app/assets/stylesheets/all/style.css.scss
+++ b/app/assets/stylesheets/all/style.css.scss
@@ -232,7 +232,7 @@ input[type=button] {
   left: 0;
   z-index: 11;
 
-  #code-name {
+  #code {
     width: 150px;
     height: 28px;
     margin-top: 10px;
