--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="search-bar">
-            <input id="code-name" type="text" placeholder="Code">
+            <input id="code" type="text" placeholder="Code">
             <p id="search-button" class="icon-search icon-large clickable"></p>
             <div class="catalog-container">
                 <select name="catalog" id="catalog" size="5">
