--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,8 +63,8 @@
             </div>
         </div>
         <div id="mindmap"></div>
-        <!--Get the rails environment and put it in a js var -->
         <script type="text/javascript">
+            //Get the rails environment and put it in a js var
             window.rails_env = ('<%= Rails.env %>');
         </script>
         <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyAjPl4yzI4xYU9yw2GgptYV547pFo3ounE"></script>
